# ForexTrading

./: CMakeLists.txt  DataStore.cpp  DataStore.h  ExperimentFramework.cpp  ExperimentFramework.h  IndicatorManager.cpp  IndicatorManager.h  OHLC.cpp  OHLC.h  ParameterParticle.cpp  ParameterParticle.h  ParameterSwarm.cpp  ParameterSwarm.h  Particle.cpp  Particle.h  StrategyParticle.cpp  StrategyParticle.h  StrategySwarm.cpp  StrategySwarm.h  Swarm.cpp  Swarm.h  Tick.cpp  Tick.h  TradingAgent.cpp  TradingAgent.h  TransactionHistory.cpp  TransactionHistory.h  WeightVectorParticle.cpp  WeightVectorParticle.h  WeightVectorSwarm.cpp  WeightVectorSwarm.h  main.cpp
Execution/: ForexTrading.exe.stackdump
